# Dot-Benchmarks

./: Cargo.toml
benches/: dot_product.rs  fibo_example.rs
results/Dot Product/1000/report/: index.html
results/Dot Product/1000000/report/: index.html
results/Dot Product/10000000/report/: index.html
results/Dot Product/100000000/report/: index.html
results/Dot Product/Blas ndarray/1000/base/: sample.json  tukey.json
results/Dot Product/Blas ndarray/1000/new/: benchmark.json  estimates.json
results/Dot Product/Blas ndarray/1000/report/: index.html
results/Dot Product/Blas ndarray/1000000/base/: sample.json  tukey.json
results/Dot Product/Blas ndarray/1000000/new/: benchmark.json  estimates.json
results/Dot Product/Blas ndarray/1000000/report/: index.html
results/Dot Product/Blas ndarray/10000000/base/: benchmark.json  estimates.json  sample.json  tukey.json
results/Dot Product/Blas ndarray/10000000/report/: index.html
results/Dot Product/Blas ndarray/100000000/base/: benchmark.json
results/Dot Product/Blas ndarray/100000000/new/: estimates.json  sample.json  tukey.json
results/Dot Product/Blas ndarray/100000000/report/: index.html
results/Dot Product/Blas ndarray/report/: index.html
results/Dot Product/Naive Native/report/: index.html
results/Dot Product/Native 1/report/: index.html
results/Dot Product/Native 2/report/: index.html
results/Dot Product/SIMD f64x8/report/: index.html
results/Dot Product/report/: index.html
results/report/: index.html
src/: benchmarks.rs  main.rs
(+80 files in other folders)
